[tool.pyright]
venvPath = '.'
venv = 'venv'

[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perpstream"
version = "0.1.0"
description = "A python client for polling and fetching actions on the multiple Futures DEXs"
authors = [{ name = "defiants-co", email = "amrith@creda.io" }]
dependencies = [
    "gmx_python_sdk @ git+https://github.com/defiants-co/gmx_python_sdk.git@main",
    "requests",
    "web3",
]

[tool.poetry]
name = "gmx_abstract"
version = "0.4.0"
description = "A python client for polling and fetching actions on the GMX Exchange"
authors = ["defiants-co"]

[tool.poetry.dependencies]
python = "^3.11"
